Working backbone integration for boards#new and boards#index. Added delete button boards#index.

--- a/skeleton/app/views/layouts/application.html.erb
+++ b/skeleton/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
   <%= render partial: "layouts/header" %>
-  <%= yield %>
+
+    <%= yield %>
+  <div class="content"></div>
 </body>
 </html>
