--- a/skeleton/app/views/layouts/_header.html.erb
+++ b/skeleton/app/views/layouts/_header.html.erb
@@ -11,6 +11,10 @@
   </div>
 
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-left">
+      <li><a href="#">Home</a></li>
+      <li><a href="#/board/new">New Board</a></li>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
     <% if signed_in? %>
       <li id='add-dropdown' class='dropdown'>
