--- a/skeleton/app/assets/stylesheets/application.css.scss
+++ b/skeleton/app/assets/stylesheets/application.css.scss
@@ -13,13 +13,21 @@
  *= require_tree .
  */
 
+
+//shade 0 = #5EAFF2 = rgb( 94,175,242) = rgba( 94,175,242,1)
+//shade 1 = #F3F9FE = rgb(243,249,254) = rgba(243,249,254,1)
+//shade 2 = #9BCCF5 = rgb(155,204,245) = rgba(155,204,245,1)
+//shade 3 = #2695F2 = rgb( 38,149,242) = rgba( 38,149,242,1)
+//shade 4 = #0284F0 = rgb(  2,132,240) = rgba(  2,132,240,1)
+
+
+
 @import "bootstrap";
 @import "font-awesome";
 
-
 body {
   font-family: sans-serif;
-  background: #5483C4;
+  background: #5EAFF2;
 }
 
 .content {
@@ -46,4 +54,50 @@ h1 {
 a.board-link {
   font-weight: bold;
   font-size: 18px;
+}
+
+/* BOARDS */
+div.board-div {
+}
+
+/* LISTS */
+div.list-div {
+  background: #9BCCF5;
+  width: 20%;
+  padding: 5px;
+  margin: 5px;
+  display: inline-block;
+  border-radius: 5px;
+  box-shadow: 2px 2px 1px gray;
+}
+
+div.list-div:hover {
+  position: relative;
+  background: #2695F2;
+  bottom: 5px;
+  right: 5px;
+}
+
+p.list-header {
+  margin: 0;
+  padding: 10px 0 5px 15px;
+  font-size: 15px;
+}
+
+
+/* CARDS */
+
+div.card-div {
+  border-radius: 5px;
+  box-shadow: 2px 2px 1px gray;
+}
+
+div.panel-heading {
+  padding: 0px;
+}
+
+div.card-div:hover {
+  position: relative;
+  bottom: 5px;
+  right: 5px;
 }
