Working display patterns, all submits working but items. Need to add modal card view and move item descriptions out of the board view.

--- a/skeleton/app/assets/templates/cards/show.jst.ejs
+++ b/skeleton/app/assets/templates/cards/show.jst.ejs
@@ -1,6 +1,10 @@
 <div class="panel-heading">
-  <p class="list-header"><%= card.escape('title') %></p>
+  <p class="list-header"><%= card.escape('title') %>
+  <button class="delete-btn" type="button"></button></p>
 </div>
-<div class="panel-body"><%= card.escape('description') %></div>
-<ul class="item-list list-group">
-</ul>
+<div class="panel-body">
+  <%= card.escape('description') %>
+
+  <ul class="item-list list-group">
+  </ul>
+</div>
