--- a/skeleton/app/assets/templates/lists/show.jst.ejs
+++ b/skeleton/app/assets/templates/lists/show.jst.ejs
@@ -1,15 +1,7 @@
 <div class="list-header-div">
   <h2 class="list-header"><%= list.escape('title') %></h2>
+  <button class="delete-btn" type="button">&times</button>
 </div>
 <div class="card-list">
 
-</div>
-
-<div class="new-card">
-  <div class="panel-heading">
-    <p class="list-header">Make a new card!</p>
-  </div>
-  <div class="panel-body"></div>
-  <ul class="item-list list-group">
-  </ul>
 </div>
