--- a/skeleton/app/assets/stylesheets/application.css.scss
+++ b/skeleton/app/assets/stylesheets/application.css.scss
@@ -30,20 +30,25 @@ body {
   background: #5EAFF2;
 }
 
+ul.item-list.list-group {
+  margin: 0;
+}
+
+nav.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100000;
+}
+
 .content {
+  position: relative;
+  top: 70px;
   padding: 5px 15px 15px 15px;
   background: white;
   width: 90%;
   border-radius: 10px;
   margin: 0 auto;
-}
-
-.delete-btn {
-  border-radius: 5px;
-  background: #5483C4;
-  color: white;
-  font-family: sans-serif;
-  padding: 5px;
 }
 
 h1 {
@@ -63,9 +68,10 @@ div.board-div {
 /* LISTS */
 div.list-div {
   background: #9BCCF5;
-  width: 20%;
+  width: 250px;
   padding: 5px;
   margin: 5px;
+  vertical-align: top;
   display: inline-block;
   border-radius: 5px;
   box-shadow: 2px 2px 1px gray;
@@ -84,13 +90,53 @@ p.list-header {
   font-size: 15px;
 }
 
+h2.list-header {
+  display: inline-block;
+}
+
+div.list-div:hover .new-card {
+  display: block;
+};
 
 /* CARDS */
+
+.new-card {
+  display: none;
+}
 
 div.card-div {
   border-radius: 5px;
   box-shadow: 2px 2px 1px gray;
 }
+
+button.delete-btn {
+  opacity: 0;
+  position:relative;
+  right: 5px;
+  width: 20px;
+  height: 20px;
+  background: none;
+  color: black;
+  font-family: sans-serif;
+  padding: 5px;
+  margin: 0px;
+  float: right;
+  border: none;
+  line-height: 20px;
+}
+
+div.card-div:hover button.delete-btn {
+  display: inline-block;
+  opacity: 0.5;
+}
+
+div.card-div:hover button.delete-btn:hover {
+    display: inline-block;
+    border-radius: 50%;
+    background: red;
+    opacity: 1.0;
+}
+
 
 div.panel-heading {
   padding: 0px;
@@ -100,4 +146,14 @@ div.card-div:hover {
   position: relative;
   bottom: 5px;
   right: 5px;
+  box-shadow: 4px 4px 4px #CCCCCC;
 }
+
+/* ITEMS */
+.new-item {
+  display: none;
+}
+
+.card-div:hover .new-item {
+  display: block;
+};
