--- a/skeleton/app/assets/templates/lists/new.jst.ejs
+++ b/skeleton/app/assets/templates/lists/new.jst.ejs
@@ -1,15 +1,11 @@
-<h3>Make a new list!</h3>
-<div class="list-header-div">
-  <h2 class="list-header"><%= list.escape('title') %></h2>
-</div>
+<form class="list-form">
+  <div class="form-group">
+    <input
+      name="title"
+      type="text"
+      class="form-control list-title-input"
+      placeholder="My Sweet New List">
+  </div>
 
-<div class="card-list">
-  <form class="list-form">
-    <div class="form-group">
-      <label>Title</label>
-      <input type="text" class="form-control" placeholder="My Sweet New List">
-    </div>
-
-    <submit class="btn btn-default">Create!</submit>
-  </form>
-</div>
+  <input type="submit" value="Create!" class="btn btn-default">
+</form>
