--- a/skeleton/app/assets/templates/lists/new.jst.ejs
+++ b/skeleton/app/assets/templates/lists/new.jst.ejs
@@ -1,11 +1,6 @@
-<form class="list-form">
-  <div class="form-group">
-    <input
-      name="title"
-      type="text"
-      class="form-control list-title-input"
-      placeholder="My Sweet New List">
-  </div>
+<form id="new-list-form">
+  <input type="text" id="title" placeholder="List Title">
 
-  <input type="submit" value="Create!" class="btn btn-default">
+  <textarea id="description" placeholder="List description (optional)"></textarea>
+  <input type='submit'>Submit</input>
 </form>
