--- a/skeleton/app/assets/templates/items/new.jst.ejs
+++ b/skeleton/app/assets/templates/items/new.jst.ejs
@@ -1,5 +1,9 @@
-<input
-  type="text"
-  class="form-control bare-input"
-  placeholder="Gotta do this thing!"
-  value="<%= item.escape('title') %>">
+<form class="item-form">
+  <input
+    type="text"
+    class="form-control bare-input"
+    placeholder="Gotta do this thing!"
+    name="title">
+
+  <input type="submit" value="Add an item" class="btn btn-default">
+</form>
